--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "validate-99xp",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "keywords": [
     "util",
     "functional",
@@ -16,7 +16,7 @@
   "description": "The automated way to keep your json or model attribute valid",
   "type": "module",
   "homepage": "https://validate.99xp.org",
-  "browser": "lib/validate-99xp.js",
+  "browser": "lib/validate-99xp.min.js",
   "main": "lib/validate-99xp.esm.js",
   "module": "lib/validate-99xp.esm.js",
   "jsnext:main": "lib/validate-99xp.esm.js",
@@ -54,7 +54,7 @@
     "terser": "^4.6.11"
   },
   "dependencies": {
-    "underscore-99xp": "^1.3.0",
+    "underscore-99xp": "^1.7.0",
     "v8n-99xp": "^1.0.1"
   }
 }
